# once_cell

./: .travis.yml  CHANGELOG.md  Cargo.lock.min  Cargo.lock.msrv  Cargo.toml  README.md  run-miri-tests.sh
.github/workflows/: ci.yaml
debug_metadata/: README.md  once_cell.natvis
examples/: bench.rs  bench_acquire.rs  bench_vs_lazy_static.rs  break_it.rs  lazy_static.rs  reentrant_init_deadlocks.rs  regex.rs  test_synchronization.rs
miri-tests/: Cargo.toml  test.sh
miri-tests/src/: lib.rs
src/: covariant_cell_option.rs  future.rs  imp_cs.rs  imp_pl.rs  imp_std.rs  lib.rs  maybe_uninit.rs  race.rs  racerelaxed.rs  serde_impl.rs
tests/: debugger_visualizer.rs  it.rs  test.rs
tests/it/: main.rs  race.rs  race_once_box.rs  racerelaxed.rs  sync_lazy.rs  sync_once_cell.rs
xtask/: Cargo.toml
xtask/src/: main.rs  tidy.rs
xtask/tests/: tidy.rs
