[package]
name = "once_cell"
version = "1.19.0"
authors = ["Aleksey Kladov <aleksey.kladov@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.60"

description = "Single assignment cells and lazy values."
readme = "README.md"
documentation = "https://docs.rs/once_cell"

repository = "https://github.com/matklad/once_cell"
keywords = ["lazy", "static"]
categories = ["rust-patterns", "memory-management"]

exclude = ["*.png", "*.svg", "/Cargo.lock.msrv", "rustfmt.toml"]

[workspace]
members = ["xtask"]

[dependencies]
parking_lot_core = { version = "0.9.3", optional = true, default_features = false }
portable-atomic = { version = "1", optional = true }
critical-section = { version = "1", optional = true }

[dev-dependencies]
regex =  "1.2.0"
critical-section = { version = "1.1.1", features = ["std"] }

[features]
default = ["std"]

# Enables `once_cell::sync` module.
std = ["alloc"]

# Enables `once_cell::race::OnceBox` type.
alloc = ["race"]

# Enables `once_cell::race` module.
race = []

# Uses parking_lot to implement once_cell::sync::OnceCell.
# This makes no speed difference, but makes each OnceCell<T>
# up to 16 bytes smaller, depending on the size of the T.
parking_lot = ["dep:parking_lot_core"]

# Uses `critical-section` to implement `sync` and `race` modules. in
# `#![no_std]` mode. Please read `critical-section` docs carefully
# before enabling this feature.
critical-section = ["dep:critical-section", "portable-atomic" ]

# Enables semver-exempt APIs of this crate.
# At the moment, this feature is unused.
unstable = []

# Only for backwards compatibility.
atomic-polyfill = ["critical-section"]

[[example]]
name = "bench"
required-features = ["std"]

[[example]]
name = "bench_acquire"
required-features = ["std"]

[[example]]
name = "lazy_static"
required-features = ["std"]

[[example]]
name = "reentrant_init_deadlocks"
required-features = ["std"]

[[example]]
name = "regex"
required-features = ["std"]

[[example]]
name = "test_synchronization"
required-features = ["std"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--generate-link-to-definition"]
